fix: a bunch of style updates to solve flexboxes going too wide

--- a/ui/less/com/msg-view/oneline.less
+++ b/ui/less/com/msg-view/oneline.less
@@ -1,5 +1,6 @@
 .msg-view.oneline {
   display: flex;
+  flex-wrap: wrap;
   height: 32px;
   padding: 8px 6px 6px;
   overflow: hidden;
@@ -33,9 +34,7 @@
   }
   .content {
     flex: 1;
-    white-space: pre;
     overflow: hidden;
-    text-overflow: ellipsis;
     color: @dark-gray3;
     font-family: Helvetica;
     font-weight: 300;
